# shiba

./: LICENSE  pyproject.toml
src/shiba/: __init__.py  remote.py  utilities.py
src/shiba/config/: remote.config.json
src/shiba/ssh/: __init__.py  remote.py
